--- a/sample.vcxproj
+++ b/sample.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="enemyAnimData.h" />
     <ClInclude Include="fade.h" />
     <ClInclude Include="game.h" />
+    <ClInclude Include="gamemodeUI.h" />
     <ClInclude Include="input.h" />
     <ClInclude Include="light.h" />
     <ClInclude Include="main.h" />
@@ -173,6 +174,7 @@
     <ClCompile Include="enemyAnimData.cpp" />
     <ClCompile Include="fade.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="gamemodeUI.cpp" />
     <ClCompile Include="input.cpp" />
     <ClCompile Include="light.cpp" />
     <ClCompile Include="main.cpp" />
