--- a/sample.vcxproj
+++ b/sample.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="game.h" />
     <ClInclude Include="gamemodeUI.h" />
     <ClInclude Include="input.h" />
+    <ClInclude Include="item.h" />
     <ClInclude Include="light.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="meshfield.h" />
@@ -176,6 +177,7 @@
     <ClCompile Include="game.cpp" />
     <ClCompile Include="gamemodeUI.cpp" />
     <ClCompile Include="input.cpp" />
+    <ClCompile Include="item.cpp" />
     <ClCompile Include="light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="meshfield.cpp" />
